fix: adjust flex properties for hero content on small screens

--- a/src/assets/css/modules/_hero.scss
+++ b/src/assets/css/modules/_hero.scss
@@ -15,6 +15,11 @@
         height: inherit;
 
         @extend %container;
+
+        @media screen and (max-width: 900px) {
+            flex-direction: column;
+            justify-content: center;
+        }
     }
 
     &__illustration {
@@ -24,6 +29,10 @@
         width: 100%;
         max-width: 660px;
         aspect-ratio: 1 / 1;
+
+        @media screen and (max-width: 900px) {
+            display: none;
+        }
 
         img {
             width: 100%;
